shortbol/server/jvm/src/main/public/css/shortbol.css
img.logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
    border: none;
    padding: 0px 0px;

}

body {
    padding-top: 15px;
    padding-bottom: 200px;
    position: relative;
}


h1 {
    color: rgb(102, 102, 102);
    font-size: 230%
}

h2 {
    font-size: 180%
}

h3{
    font-size: 130%;
    color: rgb(121,147,189);
    display: inline;
}

h4{
    font-size: 105%;
    color: rgb(73,83,116);
    display: inline;
}



.sidebar-nav {
    padding: 9px 0;
}

.dropdown-menu .sub-menu {
    left: 100%;
    position: absolute;
    top: 0;
    visibility: hidden;
    margin-top: -1px;
}

.dropdown-menu li:hover .sub-menu {
    visibility: visible;
}

.dropdown:hover .dropdown-menu {
    display: block;
}

.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
    margin-top: 0;
}

.navbar .sub-menu:before {
    border-bottom: 7px solid transparent;
    border-left: none;
    border-right: 7px solid rgba(0, 0, 0, 0.2);
    border-top: 7px solid transparent;
    left: -7px;
    top: 10px;
}

.navbar .sub-menu:after {
    border-top: 6px solid transparent;
    border-left: none;
    border-right: 6px solid #fff;
    border-bottom: 6px solid transparent;
    left: 10px;
    top: 11px;
    left: -6px;
}

#footer {

    position: absolute;
    border: 0;
    bottom: 0;
    right: 0;
    z-index: 200;
    width: 100%;
    padding-right: 20px;
    text-align: right;
}

#footer img {
    /*width: 150px;*/
    /*height: auto;*/
}

/* make sidebar nav vertical */
@media (min-width: 768px) {
    #vertical .sidebar-nav .navbar .navbar-collapse {
        padding: 0;
        max-height: none;
        background-color: rgb(238, 255, 170);
    }

    #vertical .sidebar-nav .navbar ul {
        float: none;
    }

    #vertical .sidebar-nav .navbar ul:not {
        display: block;

    }

    #vertical .sidebar-nav .navbar li {
        float: none;
        display: block;
    }

    #vertical .sidebar-nav .navbar li a {
        padding-top: 12px;
        padding-bottom: 12px;
    }
}

@media (min-width: 768px) {
    /* uncomment if you would like the menu to be fixed */
    #vertical .navbar {
			position: fixed;
			width: 170px;
			z-index: 2;
            word-wrap: break-word;
    }
        .nav ul {
  display: none;
}

.nav .active ul {
  display: block;
}

.nav ul a {
  font-weight: normal;
  font-size: .85em;
}

.nav ul span {
  margin: 0 5px 0 2px;
}

.nav ul .active a,
.nav ul .active:hover a,
.nav ul .active:focus a {
  font-weight: bold;
  padding-left: 0px;
}

.nav ul .active span,
.nav ul .active:hover span,
.nav ul .active:focus span {
  display: none;
}



}
 #vertical .navbar-default {
    background-color: rgb(183,200,190);
    border-color: #E7E7E7;
    /*position:fixed;*/
}

 .navbar-default {
    background-color: rgb(224,228,235);
    border-color: #E7E7E7;
}

@media (min-width: 992px) {
    #vertical .navbar {
        width: 212px;

    }
    .nav ul {
  display: none;
}

.nav .active ul {
  display: block;
}

.nav ul a {
  font-weight: normal;
  font-size: .85em;
}

.nav ul span {
  margin: 0 5px 0 2px;
}

.nav ul .active a,
.nav ul .active:hover a,
.nav ul .active:focus a {
  font-weight: bold;
  padding-left: 5px;
}

.nav ul .active span,
.nav ul .active:hover span,
.nav ul .active:focus span {
  display: none;
}

@media (min-width: 1200px) {
    #vertical .navbar {
        width: 262px;

    }

    .nav ul {
        display: none;
    }

    .nav .active ul {
        display: block;
    }

    .nav ul a {
        font-weight: normal;
        font-size: 0.94em;
    }
    .nav ul{
        background-color:rgb(183,200,190);

    }
    .nav ul li{
        background-color:rgb(183,200,190);
        color:red;
    }
    .nav ul span {
        margin: 0 5px 0 2px;
        background-color:rgb(183,200,190);
    }

    .nav ul .active a,
    .nav ul .active:hover a,
    .nav ul .active:focus a {
        font-weight: bold;
        padding-left: 5px;

    }

    .nav ul .active span,
    .nav ul .active:hover span,
    .nav ul .active:focus span {
        display: none;
    }
}

}
 #vertical .navbar-default .navbar-toggle {
    border-color: black;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #DDD;
}
.navbar-default .navbar-toggle .icon-bar {
    background-color: black;
}

 #vertical .navbar-default .navbar-nav{
    background-color: rgb(219, 227, 222);


}

#vertical .navbar-default .sidebar-navbar-collapse {
    background-color: rgb(219, 227, 222);

}
#vertical .navbar-default .sidebar-navbar-collapse li {

    color: rgb(102,102,102);
}
#vertical .navbar-default .sidebar-navbar-collapse li a {

    color: rgb(102,102,102);
}

#vertical .navbar-default .sidebar-navbar-collapse li a:hover{

    color: black;
}

.templating_images img{
    width: 90%;
}
embed{
    width: 100%;
    height: 200px;
    /*height: 100%;*/
}
img.diagram{
    background-color: rgb(241, 241, 241);
    padding: 5px;
    width : 100%;
    border: solid 1px black;
    border-radius: 10px;

}
p.diagram{
    width : 100%;
}

pre{
    margin-bottom: 15px;
}

 button.btn-primary{
    position:absolute;
     right:0;
     top: 0;
     background-color: rgb(73,83,116)

}
 .example_header{
     position:relative;
     width: 100%;
     margin-top:25px;
     margin-bottom:25px;
 }
 .example_header p{
     margin-top: 20px;
 }
 .example_collapse{
     margin-bottom:20px;
     margin-top: 20px;
 }

 .nav .active {
     font-weight: bold;
     background:rgb(183,200,190);
 }

 .examplecode{
     max-height: 700px;
     overflow: auto;
     margin-bottom: 10px;
 }

 .shortbol_ace {
    position: relative;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    height: 200px;
    width: 90%;
}

.doceditor {
    position: relative;
    /*top: 0px;*/
    /*right: 0;*/
    /*bottom: 0;*/
    /*left: 0;*/
    height: 70px;
    width: 100%;
}

.projectName {
    font-weight: bolder;
    color: darkslategray;
}

.code {
    font-family: monospace;
}

.gene {
    font-style: italic;
}

.emph {
    font-style: oblique;
}

.code_example {
    width: 90%;
    margin: auto;
    border-color: #0b97c4;
    border-width: 1px;
    border-style: solid;
}

.exercise {
    border-color: #0b97c4;
    border-width: 1px;
    border-style: solid;
}

.exercise .editor {
    float: left;
    width: 50%;
}

.exercise .tasks {
    float: left;
    width: 50%
}

.exercise .status {
    text-align: right;
    padding-right: 5px;
}

.exercise .force_clear {
    clear: both;
}

.warning {
    color: red;
}

.success {
    color: green;
}

.navpannel {
    padding: 5px;
    float: left;
    background: ivory;
}

header .logo {
    float: right;
    max-height: 80px;
}

.tutorialContent {
    clear: both;
}

.back_forward {
    float: right;
}

footer ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

footer li {
    float: left;
}

footer img {
    max-height: 40px;
}

